# bcmp

./: Cargo.toml  README.md
src/: hashmatch.rs  lib.rs  treematch.rs  ukkonen.rs
src/tests/: mod.rs
