[package]
name = "bcmp"
version = "0.2.0"
authors = ["Charles Hubain <github@haxelion.eu>"]
description = "bcmp offers fast common substring enumeration for binary data"
categories = ["algorithms"]
documentation = "https://docs.rs/bcmp"
homepage = "https://github.com/haxelion/bcmp"
repository = "https://github.com/haxelion/bcmp"
license = "MIT"

[badges]
travis-ci = { repository = "haxelion/bcmp" }

[dependencies]
bytepack = "0.3.1"

