[package]
name = "bcmp"
version = "0.4.1"
authors = ["Charles Hubain <github@haxelion.eu>"]
description = "bcmp offers fast binary data comparison algorithms to enumerate common substrings, unique substrings or determine a patch set"
categories = ["algorithms"]
documentation = "https://docs.rs/bcmp"
homepage = "https://github.com/haxelion/bcmp"
repository = "https://github.com/haxelion/bcmp"
license = "MIT"

[badges]
travis-ci = { repository = "haxelion/bcmp" }

[dependencies]
bytepack = "0.4"

[dev-dependencies]
rand = "0.3"
